# SPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jack/splayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerPorxy.cpp  IPlayerPorxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  (+6 more)
app/src/main/java/com/jack/splayer/: MainActivity.kt  OpenUrl.java  SPlay.java
app/src/main/res/layout/: activity_main.xml  openurl.xml
app/src/test/java/com/jack/splayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
